name:                haven
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ali Abrar, Will Fancher
maintainer:          aliabrar@gmail.com, willfancher38@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable haven
  main-is:             Main.hs
  build-depends: base >=4.9 && <4.10
               , bytestring
               , containers
               , http-conduit
               , http-types
               , SHA
               , xml
  hs-source-dirs:      src
  default-language:    Haskell2010
