name:                haven
synopsis:            Recursively retrieve maven dependencies
description:         A haskell project that retrieves maven package dependencies recursively given a starting set of packages. The primary output format is a list of nix sets describing the maven packages.
category:            Java
version:             0.2.0.2
license:             BSD3
license-file:        LICENSE
author:              Ali Abrar, Will Fancher
maintainer:          maintainer@obsidian.systems
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

tested-with:
  GHC  ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5

executable haven
  main-is:             Main.hs
  build-depends: base >=4.9 && <4.13
               , bytestring
               , containers
               , http-conduit
               , http-types
               , mtl
               , SHA
               , xml
               , process
               , temporary
               , filepath
               , directory
               , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type: git
  location: https://github.com/obsidiansystems/haven
